# staff_trainer

./: Cargo.toml  LICENSE  README.md  apk.bat  build.rs  build_wasm.bat  dev.bat  index.html  run_wasm.bat
android/res/: icon-attribution.txt
assets/: manifest.webmanifest
src/: lib.rs  main.rs  trainer.rs
